correct illegible css and update incorrect notes

--- a/src/pages/login/_login.scss
+++ b/src/pages/login/_login.scss
@@ -95,7 +95,7 @@
       }
     }
 
-    &-to-login {
+    &-to-signup {
       text-align: center;
       margin-top: 1.1vw;
 
